NetBSD Problem Report #44905

From yamt@NetBSD.org  Sun Apr 24 23:51:20 2011
Return-Path: <yamt@NetBSD.org>
Received: by www.NetBSD.org (Postfix, from userid 1270)
	id 550EF63B842; Sun, 24 Apr 2011 23:51:20 +0000 (UTC)
Message-Id: <20110424235120.550EF63B842@www.NetBSD.org>
Date: Sun, 24 Apr 2011 23:51:20 +0000 (UTC)
From: yamt@NetBSD.org
Reply-To: yamt@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: dtrace calls xc_broadcast from callout
X-Send-Pr-Version: 3.95

>Number:         44905
>Category:       kern
>Synopsis:       dtrace calls xc_broadcast from callout
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Apr 24 23:55:00 +0000 2011
>Closed-Date:    Wed Oct 19 11:07:53 +0000 2011
>Last-Modified:  Wed Oct 19 11:07:53 +0000 2011
>Originator:     YAMAMOTO Takashi
>Release:        NetBSD current
>Organization:

>Environment:


System: NetBSD
Architecture: i386
Machine: i386
>Description:
dtrace calls xc_broadcast from callout.

panic: kernel diagnostic assertion "!cpu_intr_p() && !cpu_softintr_p()" failed: file "/siro/nbsd/src/sys/kern/subr_xcall.c", line 181
fatal breakpoint trap in supervisor mode
trap type 1 code 0 eip c017a254 cs 8 eflags 246 cr2 bfbfdfa0 ilevel 2
Stopped in pid 0.24 (system) at netbsd:breakpoint+0x4:  lock ret
db{2}> t
breakpoint(c05be725,d4feabfc,d4fbd6c0,c057a4d9,d6ed7ff0,0,d4feac10,d4feabe8,0,0)
 at netbsd:breakpoint+0x4
panic(c05de044,c057a4d9,c05c0360,c05c0384,b5,10202,d4feac40,c041bade,c057a4d9,c0
5c0384) at netbsd:panic+0x1fc
kern_assert(c057a4d9,c05c0384,b5,c05c0360,0,0,d6ed7fe0,0,d6ed7ff0,0) at netbsd:k
ern_assert+0x39
xc_broadcast(0,d6ed7fe0,d6ed7ff0,0,1,d71c3fa8,d4feac80,d6ed80a4,ffffffff,d6ed7ff
0) at netbsd:xc_broadcast+0x4e
dtrace_xcall(ffffffff,d6ed7ff0,0,d6ecc755,d71c3f74,dd781004,d4feaca0,d6ecc76c,d4
10da82,e0) at dtrace:dtrace_xcall+0x5e
dtrace_sync(d410da82,e0,4,d4eb69d4,d4fee004,100,d4feacd0,d6ecc80c,d4eb6978,8) at
 dtrace:dtrace_sync+0x14
dtrace_dynvar_clean(d4eb6978,8,10246,c0293c9a,d410da82,c02b54d6,0,d4eb69d4,d4fee
004,100) at dtrace:dtrace_dynvar_clean+0xac
dtrace_state_clean(d4eb693c,c02b5350,d4fead14,0,2,d4fee064,d4fee86c,d4fef06c,d4f
ef86c,d6ecc7e0) at dtrace:dtrace_state_clean+0x2c
callout_softclock(0,d411a2c0,d4fead80,d4fead38,d6b9f000,d411a2c0,fe0074,d6b9f000
,d411a2c0,d4fe0074) at netbsd:callout_softclock+0x1a6
softint_execute(d6ed7c9f,c02a7f20,d4fead84,d4dc2264,d411a2c0,d6b9f000,d6bff7cc,d
4fead78,0,d4feada0) at netbsd:softint_execute+0x6a
softint_dispatch(d6b9f000,2,0,0,0,0,d4fead90,d4fead28,d411a2c0,0) at netbsd:soft
int_dispatch+0xd7
fatal page fault in supervisor mode
trap type 6 code 0 eip c0187241 cs 8 eflags 10246 cr2 36 ilevel 8
kernel: supervisor trap page fault, code=0
Faulted in DDB; continuing...
db{2}> 
>How-To-Repeat:

>Fix:


>Release-Note:

>Audit-Trail:
From: "YAMAMOTO Takashi" <yamt@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44905 CVS commit: src/external/cddl/osnet/dist/uts/common
Date: Wed, 19 Oct 2011 11:02:09 +0000

 Module Name:	src
 Committed By:	yamt
 Date:		Wed Oct 19 11:02:09 UTC 2011

 Modified Files:
 	src/external/cddl/osnet/dist/uts/common/dtrace: dtrace.c
 	src/external/cddl/osnet/dist/uts/common/sys: dtrace_impl.h

 Log Message:
 because our xcall stuff can't be used in softint, use kernel threads
 for cleaner/deadman low-level cyclic replacement.  PR/44905


 To generate a diff of this commit:
 cvs rdiff -u -r1.18 -r1.19 \
     src/external/cddl/osnet/dist/uts/common/dtrace/dtrace.c
 cvs rdiff -u -r1.4 -r1.5 \
     src/external/cddl/osnet/dist/uts/common/sys/dtrace_impl.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: yamt@NetBSD.org
State-Changed-When: Wed, 19 Oct 2011 11:07:53 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.