because our xcall stuff can't be used in softint, use kernel threads for cleaner/deadman low-level cyclic replacement.  PR/44905